# mailboxvalidator-rust

./: Cargo.toml  LICENSE.txt  readme.md
docs/source/: code.md  conf.py  index.md  quickstart.md
src/: lib.rs
